--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@
   /* white-space: nowrap; */
   width: 0;
   border-right: 3px solid var(--primary);
-  animation: typing 3s steps(20, end) infinite, blink 0.5s step-end infinite;
+  animation: typing 3s steps(20, end) infinite, blink 0.5s step-end ;
 }
 
 /* Delay for the second line */
